# cutrepad

./: .gitignore  CMakeLists.txt  appconfig.cpp  appconfig.h  configmanager.cpp  languages.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myeventfilter.cpp  myeventfilter.h
include/: codeeditor.h  configmanager.h  customtabbar.h  mainwindow.h
languages/: cpp.conf  cpp.ini  gemix.ini
resources/: resources.qrc
src/: codeeditor.cpp  configmanager.cpp  main.cpp  mainwindow.cpp
translations/: cutrepad_es_ES.ts
ui/: mainwindow.ui
